Fixed page overflow for mobile

--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,11 @@ h6 {
     scroll-padding-top: 25%;
 }
 
-.body {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-right: 0px;
-    margin-left: 0px;
+.wrapper {
     width: auto;
-    overflow-x: hidden;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 }
 
 /* MAIN COMPONENTS */
@@ -39,7 +37,7 @@ h6 {
     background-image: linear-gradient(#271F47 39%, #2E2E2E 96%);
     background-size: cover;
     width: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .main-container {
@@ -47,13 +45,13 @@ h6 {
     height: 300rem;
     background-size: cover;
     width: auto;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .line {
     position: absolute;
-    top: 50%;
-    bottom: -300rem;
+    top: 400px;
+    bottom: 0;
     left: 400px;
     z-index: 0;
     width: 1px;
